# coding-agent-runtime

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  opencode.json
.claude/: README.md  settings.example.json
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
.nono/: profile.json
.opencode/: README.md  config.json
.opencode/agents/: explore.md  planner.md  reviewer.md  tdd.md
.opencode/commands/: bench.md  lint.md  test.md
.sdd/: plan.md
crates/agent-plugin-opencode/: AGENTS.md  Cargo.toml
crates/agent-plugin-opencode/src/: cli.rs  discovery.rs  lib.rs  main.rs  watcher.rs
crates/agent-plugin-opencode/tests/: cli_flag.rs  discovery.rs  discovery_cmdline.rs  mock_tmux.rs  smoke.rs  watcher.rs  watcher_diff.rs
crates/agent-plugin-opencode/tests/common/: mod.rs
crates/agent-plugin-sdk/: AGENTS.md  Cargo.toml
crates/agent-plugin-sdk/src/: lib.rs
crates/agent-plugin-sdk/tests/: sdk_smoke.rs
crates/agentd/: AGENTS.md  Cargo.toml
crates/agentd-protocol/: AGENTS.md  Cargo.toml
crates/agentd-protocol/src/: agent.rs  error.rs  lib.rs  methods.rs  plugin.rs  session.rs  status.rs  version.rs
crates/agentd-protocol/tests/: error.rs  methods.rs  plugin.rs  session.rs  smoke.rs  snapshots.rs  status.rs
crates/agentd-protocol/tests/snapshots/: snapshots__snapshot_agent_type_claude_code.snap  snapshots__snapshot_full_session.snap  snapshots__snapshot_method_constants_table.snap  snapshots__snapshot_protocol_error_parse_error_with_message.snap  snapshots__snapshot_session_source_resumed.snap  snapshots__snapshot_session_status_starting.snap  snapshots__snapshot_session_status_waiting_for_user.snap
crates/agentd-testing/: AGENTS.md  Cargo.toml
crates/agentd-testing/fixtures/http/claude-code/scenarios/: greeting.toml
crates/agentd-testing/fixtures/http/opencode/scenarios/: greeting.toml
crates/agentd-testing/src/: agent_env.rs  harness.rs  http_mock.rs  lib.rs  sample_session.rs  scenario.rs  scripted.rs  test_agent.rs
crates/agentd-testing/tests/: agent_env.rs  fixture_claude_code.rs  fixture_opencode.rs  harness.rs  hash_format.rs  http_mock.rs  scenario.rs  scripted.rs  test_agent.rs
crates/agentd/migrations/: 0001_init.sql
crates/agentd/src/: cli.rs  config.rs  control_client.rs  daemon.rs  event_bus.rs  lib.rs  main.rs  paths.rs  plugin_heartbeat.rs  plugin_spawner.rs  plugin_supervisor.rs  plugin_uds.rs  plugins_manifest.rs  session_create.rs  state.rs  tmux.rs  tracing_init.rs
crates/agentd/src/cli/: init.rs  mod.rs
crates/agentd/src/db/: migrations.rs  mod.rs  repo.rs  wrapper.rs
crates/agentd/src/handlers/: mod.rs  mutate.rs  plugin_handlers.rs  read.rs  router.rs  subscriber_registry.rs
crates/agentd/src/ipc/: control.rs  framing.rs  mod.rs  plugin.rs
crates/agentd/src/status/: cache.rs
crates/agentd/src/tui/: color.rs  event_source.rs  input.rs  mod.rs  new_modal.rs  rename_modal.rs  render.rs  state.rs
crates/agentd/tests/: cli_lazy_start.rs  cli_parses.rs  cli_wiring.rs  config.rs  control_client.rs  control_client_subscribe.rs  control_server.rs  daemon_boot.rs  db_open.rs  event_bus.rs  framing.rs  handler_emits.rs  handlers_mutate.rs  handlers_read.rs  init.rs  migrations.rs  paths.rs  plugin_handlers.rs  plugin_heartbeat.rs  plugin_spawner.rs  plugin_supervisor.rs  plugin_uds_handshake.rs  plugins_manifest.rs  real_tmux.rs  repo.rs  session_create.rs  status_cache.rs  subscriber_registry.rs  tmux.rs  tracing_init.rs  tui_color.rs  tui_event_loop.rs  tui_input.rs  tui_new_modal.rs  tui_rename_modal.rs  tui_render.rs  tui_state.rs
crates/agentd/tests/snapshots/: tui_render__render_at_200x50.snap  tui_render__render_empty_state_at_80x24.snap  tui_render__render_help_modal_at_80x24.snap  tui_render__render_mixed_sessions_at_80x24.snap  tui_render__render_new_modal_at_80x24.snap  tui_render__render_one_working_session_at_80x24.snap  tui_render__render_rename_modal_at_80x24.snap
docs/architecture/: README.md
docs/decisions/: 0001-json-rpc-over-uds.md  0002-tmux-interface.md  0003-mit-license.md  0004-paywall-free-testing.md  README.md
docs/superpowers/plans/: 2026-06-18-agentd-v1.md  2026-06-19-agentd-v2.md  2026-06-20-agentd-v3.md  2026-06-20-agentd-v4.md
docs/superpowers/specs/: 2026-06-18-agentd-design.md  2026-06-20-ci-only-test-tags-design.md  2026-06-20-plan-3-assembled-daemon-design.md  2026-06-20-plan-4-tui-dashboard-design.md
docs/workflows/: README.md  commit.md  release.md  tdd.md
scripts/: README.md  e2e-smoke.sh
xtask/: AGENTS.md  Cargo.toml
xtask/src/: cmd.rs  main.rs
xtask/tests/: ci_smoke.rs
