[workspace]
resolver = "2"
members = [
    "crates/agent-plugin-opencode",
    "crates/agent-plugin-sdk",
    "crates/agentd",
    "crates/agentd-protocol",
    "crates/agentd-testing",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/arkokat/agentd"
authors = ["arkokat"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.10"
uuid = { version = "1.10", features = ["v7", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
nucleo = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
# Tests use .unwrap() freely; production code uses .expect("reason") which is checked by `expect_used`.
unwrap_used = "allow"
# Catches `.expect()` without a reason string. Production code MUST have a reason; tests can too.
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
