[package]
name = "agent-plugin-opencode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reference plugin: bridges opencode-style events to the agentd daemon"

[[bin]]
name = "agentd-plugin-opencode"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
agentd-protocol = { path = "../agentd-protocol" }
agentd-plugin-sdk = { path = "../agent-plugin-sdk" }
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "io-util", "process"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
