[package]
name = "agentd-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Test harness, scripted test-agent fixture, and HTTP mock for agentd plugin tests"

[lints]
workspace = true

[dependencies]
agentd-protocol = { path = "../agentd-protocol" }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync"] }
axum.workspace = true
tempfile.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
